# mcp-base-server

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  environment.md  testing.md  workflow.md
src/mcp_base_server/: server.py
tests/: test_health.py
